--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -5,3 +5,4 @@ vich_uploader:
     amiibo_images:
       uri_prefix: /images/amiibo
       upload_destination: '%kernel.project_dir%/public/images/amiibo'
+      namer: Vich\UploaderBundle\Naming\UniqidNamer
